# django-unpoly

./: 404.html  AUTHORS.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  pyrightconfig.json  sitemap.xml  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  release.yml
api/: index.html
authors/: index.html
contributing/: index.html
django_unpoly/: __init__.py  cli.py  exceptions.py  middleware.py  up.py
django_unpoly/static/django_unpoly/: up_djdt.js
django_unpoly/static/up/: django_unpoly.js
django_unpoly/templates/up/: form.unpoly.html  form.up.html
docs/: api.md  installation.md  usage.md
history/: index.html
installation/: index.html
search/: search_index.json
tests/: __init__.py  test_django_unpoly.py
usage/: index.html
