[tool]
[tool.poetry]
name = "django-unpoly"
version = "0.2.0.rc1"
homepage = "https://github.com/jwaschkau/django-unpoly"
description = "Unpoly integration for Django."
authors = ["Jannik Eilers <j.waschkau@gmail.com>"]
readme = "README.md"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
]
packages = [
    { include = "django_unpoly" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.8.0,<4.0"
fire = "0.4.0"

black  = { version = "^24.4.1", optional = true}
isort  = { version = "5.13.0", optional = true}
flake8  = { version = "3.8.4", optional = true}
flake8-docstrings = { version = "^1.6", optional = true }
pytest  = { version = "^8.0", optional = true}
pytest-cov  = { version = "^5.0", optional = true}
tox  = { version = "^4.0", optional = true}
virtualenv  = { version = "^20.26", optional = true}
pip  = { version = "^24.0", optional = true}
mkdocs  = { version = "^1.6.0", optional = true}
mkdocs-include-markdown-plugin  = { version = "^6.0.0", optional = true}
mkdocs-material  = { version = "^9.0.0", optional = true}
mkdocstrings  = { version = "^0.25.0", optional = true}
mkdocs-material-extensions  = { version = "^1.0.1", optional = true}
twine  = { version = "^5.0", optional = true}
mkdocs-autorefs = {version = "^1.0.1", optional = true}
pre-commit = {version = "^2.12", optional = true}
toml = {version = "^0.10", optional = true}
Django = ">=3, <5"
docutils = "!=0.21.post1"  # https://github.com/python-poetry/poetry/issues/9248#issuecomment-2026240520

[tool.poetry.extras]
test = [
    "pytest",
    "black",
    "isort",
    "flake8",
    "flake8-docstrings",
    "pytest-cov"
    ]

dev = ["tox", "pre-commit", "virtualenv", "pip", "twine", "toml"]

doc = [
    "mkdocs",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocs-material-extension",
    "mkdocs-autorefs"
    ]

[tool.poetry.scripts]
django-unpoly = 'django_unpoly.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
